# Mesh-Network

./: Cargo.toml  LICENSE  README.md  esp32_relay.ino  samplecode
hardware/: _autosave-new.kicad_pcb  _autosave-new.kicad_sch  fp-info-cache  new.csv  new.kicad_pcb  new.kicad_prl  new.kicad_pro  new.kicad_sch  sx1262B.bak  sx1262B.kicad_sym
hardware_con/: esp32_reciver.rs  transmitter.rs
src/: crypto.rs  main.rs  node.rs  packet.rs  radio.rs  receiver.rs  reciver.rs  relay.rs  reliability.rs  sender.rs  ui.rs
src/radio/: bluetooth.rs  mod.rs  nrf.rs  tcp.rs
