[package]
name = "major_proj"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
x25519-dalek = "2.0"
aes-gcm = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
serialport = "4.3"
async-trait = "0.1"
colored = "3.1.1"
crossterm = "0.29.0"
